2014-11-28  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* Created DiffusionMRIToolbox

	* Moved fit_DT.m and dt2image.m from CardiacToolbox
	to DiffusionMRIToolbox
	
	* matlab/DiffusionMRIToolbox/fit_DT.m: (0.1.3)
	
	- Added extra functionality: diffusion tensor fitting can
	be performed using linear or nonlinear fitting, and using
	positivity constraints or not.

	- Fixed bug where 1D signals crashed

	- Now outputs S0, rather than log(S0)

	* matlab/DiffusionMRIToolbox/DT2image: (0.1.3)

	- minor change to handle S0 rather than log(S0) from fit_DT

	* Add matlab/DiffusionMRIToolbox/fit_stretched_exponential.m

	- FIT_STRETCHED_EXPONENTIAL    Fit the stretched exponential model of 
	diffusion to an image

2014-11-26 Christopher Kelly  <christopher.kelly28@gmail.com>

	* matlab/FiltersToolbox/imblend.m: (0.2.1)

    - Update old syntax to check input/output arguments.

2014-11-25 Irvin Teh <irvin@well.ox.ac.uk>

	* matlab/FiltersToolbox/imagesc_nD.m: (0.1.0)

	- Minor formatting fix to imagesc_nD.m

2014-11-25  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/ManifoldToolbox/tri2sphrad.m: (0.1.0)

	- TRI2SPHRAD Estimate radius of sphere with same area as
	triangular mesh.

2014-11-23  Ramon Casero  <rcasero@gmail.com>

	* matlab/PointsToolbox/smacof.m: (0.1.1)
	* matlab/PointsToolbox/cons_smacof_pip.m: (0.4.3)
	* matlab/ManifoldToolbox/tri_sphparam.m: (0.4.6)

	- Fix bug. To compute stress we were adding all the terms in the
	distance matrix instead of only the upper triangular half.

2014-11-21  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* matlab/CardiacToolbox/fit_DT.m: (0.1.2)

	- Fixed minor bug, program crashed without all output arguments.

	* Add matlab/FiltersToolbox/forward_TV.m: (0.1.1)
	* Add matlab/FiltersToolbox/forward_TV_2D.m: (0.1.1)
	* Add matlab/FiltersToolbox/inverse_TV.m: (0.1.1)
	* Add matlab/FiltersToolbox/inverse_TV_2D.m: (0.1.1)
	* Add matlab/FiltersToolbox/forward_TV_mex.cpp: (0.1.1)
